Side bar mobile bug squashed

--- a/src/style.scss
+++ b/src/style.scss
@@ -210,6 +210,10 @@ a:active {
 		width: 85vw;
 	}
 
+	.side-bar.closed {
+		left: -85vw;
+	}
+
 	.header-mobile {
 		top: -100px;
 	}
